--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.2'
         classpath 'com.android.tools.build:gradle:3.1.2'
 
-        // TODO (1) Make a new Firebase project in the Firebase Console and follow the instructions.
+        // COMPLETED (1) Make a new Firebase project in the Firebase Console and follow the instructions.
         // The console is here: https://console.firebase.google.com/
 
         // TODO (2) Add Google Services plugin here
