--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,9 +38,13 @@ dependencies {
     // Preferences Dependencies
     implementation 'com.android.support:preference-v7:27.1.1'
 
-    // TODO (3) Add the Firebase libraries and apply the GPS plugin in this file. Make sure to save the
+    // COMPLETED (3) Add the Firebase libraries and apply the GPS plugin in this file. Make sure to save the
+    //noinspection GradleCompatible
+    implementation 'com.google.firebase:firebase-messaging:15.0.2'
     // google.services.json file in the app folder. After syncing the changes, you should be able
     // to send a notification to your app using the Firebase console. The app must be in the
     // background!
 
 }
+
+apply plugin: 'com.google.gms.google-services'
