--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,13 @@
             android:authorities="android.example.com.squawker.provider.provider"
             android:exported="false" />
 
+        <service
+            android:name=".fcm.SquawkFirebaseInstanceIdService">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+            </intent-filter>
+        </service>
+
         <activity
             android:name=".following.FollowingPreferenceActivity"
             android:parentActivityName=".MainActivity">
@@ -33,7 +40,7 @@
                 android:value=".MainActivity" />
         </activity>
 
-        <!-- TODO (5) Add your new service here, with an intent filter for action
+        <!-- COMPLETED (5) Add your new service here, with an intent filter for action
         com.google.firebase.INSTANCE_ID_EVENT" -->
 
     </application>
